# lifehacks.colour

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
lifehacks/colour/: __init__.py  __main__.py  _hsla.py  _hsla.pyi  _rgba.py  _rgba.pyi  abstract.py  abstract.pyi  hsla.py  rgba.py  rgba.pyi
lifehacks/colour/palette/: __init__.py  __main__.py  apple.py  mariana.py
tests/: __init__.py  test_hsla.py  test_rgba.py
